--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="empty">No Results Found</string>
     <string name="search_for_books">Get Book by Searching</string>
     <string name="no_connection_message">No internet connection</string>
+    <string name="lost_connection_message">Connection has been lost</string>
 
     <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
     <string name="settings_menu_item">Settings</string>
